osprey_worker/src/osprey/engine/ast_validator/tests/test_validation_context/test_validation_transforms_osprey_py_ast_python_errors.txt
error: '(' was never closed
--> main.sml:1:3
     |
   1 | foo(
     |    ^